Bug fixes : result list title overflow

--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -466,8 +466,7 @@ ul.social-buttons li {
 }
 
 .popover.left .arrow {
- top: 23px;
- border-left-color: #f7f7f7;
+ top: 39px;
 }
 
 
@@ -886,15 +885,18 @@ p.tab-content-empty {
 #side-bar .result .illust
 {
  float: left;
+ width: 32%;
 }
 
 #side-bar .result .info-result
 {
- margin-left: 5px;
+ padding-left: 5px;
  min-height: 115px;
- max-width: 235px;
+ max-width: 68%;
  display: inline-block;
-}
+ box-sizing: border-box;
+ -webkit-box-sizing: border-box;
+ -moz-box-sizing: border-box;}
 
 #side-bar .result .info-result h3
 {
@@ -1294,13 +1296,17 @@ p.tab-content-empty {
 
 #themes, #usages {
   float: left;
-  margin-right: 10px;
   color: #80747c;
 
   ul {
     margin: 0;
     text-align: center;
   }
+}
+
+#usages {
+  margin-left: 30px;
+  margin-right: 20px;
 }
 
 #toolbox {
@@ -1797,7 +1803,6 @@ a.accordion-toggle  {
   #content {
     height: 100%;
     // min-height: 100%;
-    overflow: hidden;
   }
 
   #search-bar {
